@@ -1,0 +1,5 @@
+package ui;
+
+public interface KeyHandler {
+	public void key_pressed(String description);
+}
